--- a/main.kv
+++ b/main.kv
@@ -1,6 +1,12 @@
 #:import IconLeftWidget kivymd.uix.list.IconLeftWidget
 #:import WelcomeScreen ui.screens.welcome_screen
 #:import DecoderScreen ui.screens.decoder_screen
+#:import EncoderScreen ui.screens.encoder_screen
+#:import TrainingMenuScreen ui.screens.training_menu_screen
+#:import TappingScreen ui.screens.tapping_training_screen
+#:import ListeningScreen ui.screens.listening_training_screen
+#:import DefaultScreen ui.screens.default_screen
+
 
 <NavigationItem>
     theme_text_color: 'Custom'
@@ -21,7 +27,7 @@
 
             canvas:
                 Color:
-                    rgb: 2/255, 2/255, 2/255
+                    rgb: 0, 0, 0
                 Rectangle:
                     pos: self.pos
                     size: self.size
@@ -37,7 +43,7 @@
 
                 Image:
                     size_hint_x: 1
-                    source: "ui\img\morse_code_icon.png"
+                    source: 'ui\img\morse_code_icon.png'
 
             MDIconButton:
                 icon: "close-circle"
@@ -62,22 +68,16 @@ Screen:
         ScreenManager:
 
             WelcomeScreen:
-                BoxLayout:
-                    orientation: 'vertical'
-                    MDToolbar:
-                        title: "Navigation Drawer"
-                        md_bg_color: app.theme_cls.primary_color
-                        elevation: 10
-                        left_action_items: [['menu', lambda x: nav_drawer.toggle_nav_drawer()]]
 
             DecoderScreen:
-                BoxLayout:
-                    orientation: 'vertical'
-                    MDToolbar:
-                        title: "Navigation Drawer"
-                        md_bg_color: app.theme_cls.primary_color
-                        elevation: 10
-                        left_action_items: [['menu', lambda x: nav_drawer.toggle_nav_drawer()]]
+
+            EncoderScreen:
+
+            TrainingMenuScreen:
+
+            ListeningScreen:
+
+            TappingScreen:
 
 
         MDNavigationDrawer:
