--- a/ui/screens/home_screen.kv
+++ b/ui/screens/home_screen.kv
@@ -4,7 +4,7 @@
 #:import MDLabel kivymd.uix.label
 #:import DefaultButton ui.widgets.default_button
 
-<WelcomeScreen>
+<HomeScreen>
     FloatLayout:
         size_hint: .65, .65
         pos_hint: {'center_x': 0.5, 'center_y': .5}
