Various Quality of App improvements added listening_traning_screen kv added tapping_traning_screen kv fixed kv style issue in training_menu that was causing clock warnings fixed bg scroll speed customized toolbar title for each screen used icon_callback for mdtextfields Added audio_amplitude_visualizer for calibration (not yet implemented)

--- a/ui/screens/default_screen.kv
+++ b/ui/screens/default_screen.kv
@@ -14,7 +14,7 @@
         anchor_y: 'top'
         MDToolbar:
             id: toolbar
-            title: "Navigation Drawer"
-            md_bg_color: app.theme_cls.primary_color
+            title: root.title
+            md_bg_color: .3,.3,.3,.9 # app.theme_cls.primary_light
             elevation: 10
             left_action_items: [['menu', lambda x: app.root.ids.nav_drawer.toggle_nav_drawer()]]
