--- a/ui/widgets/default_button.kv
+++ b/ui/widgets/default_button.kv
@@ -2,4 +2,4 @@
     elevation_normal: 10
     md_bg_color: app.theme_cls.primary_color
     md_border_color: app.theme_cls.primary_color
-    pos_hint:{"center_x":0.5,"center_y":1.5}
+#    pos_hint:{"center_x":0.5,"center_y":1.5}
