Calibration screen now has an audio threshold visualizer

--- a/ui/widgets/audio_amplitude_visualizer.kv
+++ b/ui/widgets/audio_amplitude_visualizer.kv
@@ -2,3 +2,10 @@
     orientation: 'vertical'
     padding: dp(2)
     spacing: dp(2)
+    canvas.before:
+        Color:
+            rgba: .2,.2,.2,.7
+        RoundedRectangle:
+            size: self.size
+            pos: self.pos
+            radius: [dp(1)]
