--- a/ui/screens/calibration_screen.kv
+++ b/ui/screens/calibration_screen.kv
@@ -1,33 +1,41 @@
+#: import AudAmpVisualizer ui.widgets.audio_amplitude_visualizer
+
+
 <CalibrationScreen>
     MDCard:
         id: calibration_card
-        padding: dp(24)
-        spacing: dp(24)
+        padding: dp(6)
+        spacing: dp(6)
         orientation: 'vertical'
-        size_hint: (0.75, 0.45)
+        size_hint: 0.75, 0.45
         pos_hint: {'top': 0.75, 'center_x': 0.5}
 
         MDLabel:
             text: 'Calibrate Audio Input'
-            font_style: 'H4'
+            font_style: 'Body2'
             halign: 'center'
             theme_text_color: 'Custom'
             text_color: 1, 1, 1, 1
 
-        Slider:
-            size_hint: 0.75, None
-            pos_hint: {'center_x': 0.5}
-            on_value: root.on_value_change(self.value)
+        AudAmpVisualizer:
+            id: amp_viz
+            orientation: "horizontal"
+            size_hint_y: 1
+            stack_count: 20
+            value: 15
 
         BoxLayout:
             orientation: 'horizontal'
+            size_hint_y: 2
+
+            Slider:
+                size_hint: 8, None
+                pos_hint: {'center_y': 0.5}
+                on_value: root.on_slider_value_change(self.value)
+
             MDLabel:
-                text: 'Less Sensitive'
-                font_style:'Caption'
-                theme_text_color: 'Custom'
-                text_color: 1, 1, 1, 1
-            MDLabel:
-                text: 'More Sensitive'
+                text: root.sensitivity_value_label
+                font_style: 'h3'
                 font_style: 'Caption'
                 theme_text_color: 'Custom'
                 text_color: 1, 1, 1, 1
