--- a/ui/screens/decoder_screen.kv
+++ b/ui/screens/decoder_screen.kv
@@ -37,7 +37,7 @@
             normal_color: 1, 1, 1, 0.2
             size_hint: 0.85, 0.5
             icon_type: 'right'
-            icon_right: 'database-export'
+            icon_right: 'close-circle'
             icon_callback: root.clear_text
             text: root.decode_input_text
 
