--- a/ui/screens/training_menu_screen.kv
+++ b/ui/screens/training_menu_screen.kv
@@ -3,91 +3,107 @@
 
 
 <TrainingMenuScreen>
-    FloatLayout:
-        size_hint: .8, .65
-        pos_hint: {'center_x': 0.5, 'center_y': .45}
+    BoxLayout:
+        size_hint: .8, .3
+        orientation: 'vertical'
+        pos_hint: {'center_x': 0.5, 'center_y': 0.3}
+
         canvas.before:
             Color:
-                rgba: app.theme_cls.accent_color
+                rgba: app.theme_cls.accent_color[:-1] + [.8]
             RoundedRectangle:
                 size: self.size
                 pos: self.pos
                 radius: [dp(10)]
 
+        MDLabel:
+            text: 'Listening to Morse code'
+            font_style: 'H5'
+            halign: 'center'
+            theme_text_color: 'Custom'
+            text_color: 1, 1, 1, 1
+            size_hint_x: 1
+
         BoxLayout:
-            size_hint: .8, .8
-            orientation: 'vertical'
-            spacing: dp(10)
-            pos_hint: {'center_x': 0.5, 'center_y': .5}
+            pos_hint: {'center_x': 0.6}
+            orientation: 'horizontal'
+            spacing: dp(20)
+            padding: dp(20), dp(20), dp(20), dp(20)
+            size_hint_y: 2
 
-            MDLabel:
-                text: 'Listening to Morse code'
-                font_style: 'H5'
-                halign: 'left'
-                theme_text_color: 'Custom'
-                text_color: [1, 1, 1, 1]
-                size_hint: 1, .3
+            DefaultButton:
+                text: 'letters'
+                icon: 'walk'
+                pos_hint: {'center_y': 0.7}
+                on_press:
+                    app.util.training_difficulty = "Easy"
+                    root.manager.current = 'listening'
 
-            GridLayout:
-                spacing: dp(20)
-                pos_hint: {'center_x': 0.5}
+            DefaultButton:
+                text: 'words'
+                icon: 'run'
+                pos_hint: {'center_y': 0.7}
+                on_press:
+                    app.util.training_difficulty = "Medium"
+                    root.manager.current = 'listening'
 
-                DefaultButton:
-                    text: 'letters'
-                    icon: 'walk'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Easy"
-                        root.manager.current = 'listening'
+            DefaultButton:
+                text: 'sentences'
+                icon: 'bike'
+                pos_hint: {'center_y': 0.7}
+                on_press:
+                    app.util.training_difficulty = "Hard"
+                    root.manager.current = 'listening'
 
-                DefaultButton:
-                    text: 'words'
-                    icon: 'run'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Medium"
-                        root.manager.current = 'listening'
+    BoxLayout:
+        size_hint: .8, .3
+        orientation: 'vertical'
+        pos_hint: {'center_x': 0.5, 'center_y': 0.6}
 
-                DefaultButton:
-                    text: 'sentences'
-                    icon: 'bike'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Hard"
-                        root.manager.current = 'listening'
+        canvas.before:
+            Color:
+                rgba: app.theme_cls.accent_color[:-1] + [.8]
+            RoundedRectangle:
+                size: self.size
+                pos: self.pos
+                radius: [dp(10)]
 
-            MDLabel:
-                text: 'Tapping Morse Code'
-                font_style: 'H5'
-                halign: 'left'
-                theme_text_color: 'Custom'
-                text_color: [1, 1, 1, 1]
-                size_hint: 1, .3
+        MDLabel:
+            text: 'Tapping Morse Code'
+            font_style: 'H5'
+            halign: 'center'
+            theme_text_color: 'Custom'
+            text_color: 1, 1, 1, 1
+            size_hint_x: 1
 
-            GridLayout:
-                spacing: dp(24)
-                pos_hint: {'center_x': 0.5}
+        BoxLayout:
+            pos_hint: {'center_x': 0.6}
+            orientation: 'horizontal'
+            spacing: dp(20)
+            padding: dp(20), dp(20), dp(20), dp(20)
+            size_hint_y: 2
 
-                DefaultButton:
-                    text: 'letters'
-                    icon: 'walk'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Easy"
-                        root.manager.current = 'tapping'
+            DefaultButton:
+                pos_hint: {'center_y': 0.7}
+                text: 'letters'
+                icon: 'walk'
+                on_press:
+                    app.util.training_difficulty = "Easy"
+                    root.manager.current = 'tapping'
 
-                DefaultButton:
-                    text: 'words'
-                    icon: 'run'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Medium"
-                        root.manager.current = 'tapping'
+            DefaultButton:
+                pos_hint: {'center_y': 0.7}
+                text: 'words'
+                icon: 'run'
+                on_press:
+                    app.util.training_difficulty = "Medium"
+                    root.manager.current = 'tapping'
 
-                DefaultButton:
-                    text: 'sentences'
-                    icon: 'bike'
-                    size_hint_x: 1
-                    on_press:
-                        app.util.training_difficulty = "Hard"
-                        root.manager.current = 'tapping'
+            DefaultButton:
+                pos_hint: {'center_y': 0.7}
+                text: 'sentences'
+                icon: 'bike'
+                on_press:
+                    app.util.training_difficulty = "Hard"
+                    root.manager.current = 'tapping'
+
