--- a/ui/screens/decoder_screen.kv
+++ b/ui/screens/decoder_screen.kv
@@ -48,8 +48,8 @@
             padding: dp(25)
             MDFloatingActionButton:
                 id: record_button
-                icon: 'record'
+                icon: 'microphone'
                 size: dp(56), dp(56)
                 md_bg_color: app.theme_cls.primary_color
                 text_color: 1, 1, 1, 1
-                on_press:  root.decode_audio()
+                on_press:  root.toggle_amr()
