working on tap speed test and qol -started implementation of tapping training screen - morse code chart can now be toggled visible/invisible for challenge - smoothed out "welcome" letters to be less pixellated - play prompt in encoder screen now actually generates the beeps rather than playing specific alphabet beep recordings - all textfields with left icon buttons are now functional - training screens now have mnemonic helpers for specific letters

--- a/main.kv
+++ b/main.kv
@@ -7,6 +7,7 @@
 #:import ListeningScreen ui.screens.listening_training_screen
 #:import DefaultScreen ui.screens.default_screen
 #:import CalibrationScreen ui.screens.calibration_screen
+#:import TappingSpeedTestScreen ui.screens.tapping_speed_test_screen
 
 
 <NavigationItem>
@@ -71,6 +72,9 @@ Screen:
 
             HomeScreen:
                 name: 'home'
+
+            TappingSpeedTestScreen:
+                name: 'tapspeed'
 
             TrainingMenuScreen:
                 name: 'training'
