--- a/ui/screens/encoder_screen.kv
+++ b/ui/screens/encoder_screen.kv
@@ -33,5 +33,6 @@
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             size_hint: 0.85, 0.5
             icon_right: 'send'
+            icon_left_disabled: False
             icon_left: 'close-circle'
             icon_callback: root.icon_callbacks
