--- a/ui/screens/tapping_speed_test_screen.kv
+++ b/ui/screens/tapping_speed_test_screen.kv
@@ -3,9 +3,7 @@
 #:import MorseButton ui.widgets.morse_button
 #:import ToggleImage ui.widgets.toggle_image
 
-<TappingScreen>
-    tapping_prompt_label: tapping_prompt_label
-    decode_output_label: decode_output_label
+<TappingSpeedTestScreen>
     tap_button: tap_button
 
     AnchorLayout:
@@ -13,10 +11,10 @@
         anchor_y: 'top'
 
         MDToolbar:
-            title: 'Tap Training'
+            title: 'Speed Tap'
             anchor_title: 'center'
             md_bg_color: app.theme_cls.primary_color
-            left_action_items: [["arrow-left", lambda x: root.return_menu()]]
+            left_action_items: [["arrow-left", lambda x: root.return_home()]]
 
     MDCard:
         id: decode_card
@@ -34,21 +32,20 @@
             source_on: 'ui/img/morse_code_alphabet_hidden.png'
             source_off: 'ui/img/morse_code_alphabet.png'
 
-        MDLabel:
-            id: tapping_prompt_label
-            text: root.tapping_prompt_text
-            font_style: 'Body1'
-            halign: 'center'
-            size_hint: 1, .05
-            theme_text_color: 'Custom'
-            text_color: [1, 1, 1, 1]
+        MDTextFieldRound:
+            id: prompt_textfield
+            text: root.prompt_display
+            hint_text: 'What you need to type'
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            icon_type: 'without'
+            size_hint: 0.85, 0.5
 
         MDTextFieldRound:
             id: decode_textfield
             text: root.decode_text
-            icon_type: 'without'
-            hint_text: 'The text of your morse will be displayed here'
+            hint_text: 'What your morse code translates to'
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            icon_type: 'without'
             size_hint: 0.85, 0.5
 
         MDTextFieldRound:
@@ -56,20 +53,8 @@
             text: root.decode_morse_text
             hint_text: 'Your morse will be displayed here'
             pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            icon_type: 'without'
             size_hint: 0.85, 0.5
-            icon_left: 'close-circle'
-            icon_left_disabled: False
-            icon_right: 'dice-5'
-            icon_callback: root.icon_callbacks
-
-        MDLabel:
-            id: decode_output_label
-            text: root.decode_output_text
-            font_style: 'Body1'
-            halign: 'center'
-            size_hint: 1, .05
-            theme_text_color: 'Custom'
-            text_color: [1, 1, 1, 1]
 
         BoxLayout:
             anchor_x:'center'
@@ -80,7 +65,7 @@
                 id: tap_button
                 valign: 'center'
                 icon: 'record'
-                text: 'Tap Here'
+                text: root.morse_button_text
                 size: [dp(56), dp(56)]
                 bg_color: app.theme_cls.primary_color
                 text_color: [1, 1, 1, 1]
