--- a/ui/screens/default_screen.kv
+++ b/ui/screens/default_screen.kv
@@ -3,7 +3,7 @@
 <DefaultScreen>
     canvas.before:
         Rectangle:
-            id: scroll_bg
+#            id: scroll_bg
             pos: self.pos
             size: self.size
             source: 'ui\img\morse_code_bg.jpg'
@@ -13,7 +13,7 @@
         anchor_x: 'center'
         anchor_y: 'top'
         MDToolbar:
-            id: toolbar
+#            id: toolbar
             title: root.title
             md_bg_color: .3,.3,.3,.9 # app.theme_cls.primary_light
             elevation: 10
